docs: add ts generated types

--- a/docs/10.модели.md
+++ b/docs/10.модели.md
@@ -2,6 +2,9 @@
 
 ![Как то так да](_images/image.png)
 
+
 ## А если серьёзно
 
 Описания моделей в документации нет, их структуру можно посмотреть на тестовом сервере, либо сгенерировать ts sdk там же и изучать его
+
+Также можно посмотреть [автоматически сгенерированое типы для ts](./additional/types.ts)
