docs: note about generated types

--- a/docs/10.модели.md
+++ b/docs/10.модели.md
@@ -7,4 +7,4 @@
 
 Описания моделей в документации нет, их структуру можно посмотреть на тестовом сервере, либо сгенерировать ts sdk там же и изучать его
 
-Также можно посмотреть [автоматически сгенерированое типы для ts](./additional/types.ts)
+Также можно посмотреть [автоматически сгенерированое типы для ts](./additional/types.ts) все не системные для cms типы собранны в `CustomDirectusTypes`
