fix: add user info fetching exanoke

--- a/docs/01.авторизация.md
+++ b/docs/01.авторизация.md
@@ -47,6 +47,27 @@ final ans = await dio.post(
 );
 ```
 
+## Получение информации о пользователе
+
+```dart
+await dio.get(
+  '/users/me',
+  queryParameters: {
+    'fields[]': [
+      'organizations.organization_id',
+      'id',
+      'first_name',
+      'avatar',
+      'birthdate',
+      'phone',
+      ...imageFields('avatar'),
+      'role.id',
+      'role.name',
+    ],
+  },
+)
+```
+
 ## Роли
 
 В зависимости от роли, пользователь ограничен в использование апи.
